# math-logic-resolution

./: CMakeLists.txt  MLiTA_LETI.sdf  MLiTA_LETI.sln
Debug/: MLiTA_LETI.exe.metagen  replace.txt
MLiTA_LETI/: AssemblyInfo.cpp  Form1.h  Form1.resX  MLiTA_LETI.vcxproj  MLiTA_LETI.vcxproj.filters  ReadMe.txt  Semantics.cpp  Template.cpp  stdafx.cpp
MLiTA_LETI/Debug/: MLiTA_LETI.vcxproj.GenerateResource.Cache  MLiTA_LETI.vcxprojResolveAssemblyReference.cache  vc120.idb
MLiTA_LETI/Debug/MLiTA_LETI.tlog/: CL.read.1.tlog  CL.write.1.tlog  MLiTA_LETI.lastbuildstate  MLiTA_LETI.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
MLiTA_LETI/Release/: MLiTA_LETI.vcxproj.GenerateResource.Cache  MLiTA_LETI.vcxprojResolveAssemblyReference.cache
MLiTA_LETI/Release/MLiTA_LETI.tlog/: CL.read.1.tlog  CL.write.1.tlog  MLiTA_LETI.lastbuildstate  MLiTA_LETI.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
